<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mynav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/newReminder"
            android:icon="@drawable/ic_baseline_sticky_note_2_24"
            android:title="@string/add_new_reminder" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/logout" />


    </group>
</menu>