<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="15dp"
    card_view:cardBackgroundColor="@color/orangecolor"
    app:cardElevation="15dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/size10dp"
        android:background="@color/orangecolor"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/_1"
            android:textStyle="bold"
            android:id="@+id/userid"
            android:layout_margin="@dimen/size10dp"
            android:textColor="@color/white"
            />
<!--        <ImageView-->
<!--            android:id="@+id/cartimage"-->
<!--            android:layout_width="@dimen/size80dp"-->
<!--            android:layout_height="@dimen/size80dp"-->
<!--            android:layout_alignParentTop="true"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:src="@mipmap/profile_placeholder"-->
<!--            />-->
        <RelativeLayout
            android:padding="@dimen/size3dp"
            android:background="@drawable/mask"
            android:layout_width="@dimen/size110dp"
            android:id="@+id/cartimage_rel"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_height="@dimen/size110dp">

            <com.github.siyamed.shapeimageview.CircularImageView
                android:id="@+id/cartimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_user"
                app:siBorderColor="@color/transparent"
                app:siBorderWidth="0dp"
                app:siRadius="@dimen/size50dp" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/username"
            android:id="@+id/username"
            android:textColor="@color/white"
            android:layout_below="@+id/cartimage_rel"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal" />
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/edit"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size10dp"
            android:layout_toRightOf="@+id/userid"
            android:layout_toLeftOf="@+id/cartimage_rel"
            android:text="@string/edit"
            android:layout_below="@+id/cartimage_rel"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_toRightOf="@+id/cartimage_rel"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/size20dp"
            android:id="@+id/delete"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cartimage_rel"
            android:layout_marginLeft="@dimen/size20dp" />



      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/description"
          android:textColor="@color/white"
          android:layout_below="@+id/username"
          android:id="@+id/userdesc"
          android:layout_centerHorizontal="true"
          android:gravity="center"
          android:textAlignment="center"
          />

    </RelativeLayout>


</androidx.cardview.widget.CardView>